# W2F_AI

./: .gitignore  Dockerfile.savour  README.md  pyproject.toml
1_architecture_and_design/: architecture.md
2_adrs/: 001_adr_nosql_database_storage.md  002_adr_pre_trained_models.md  003_adr_langchain_langgraph_framework.md  004_adr_llmops_platform.md
3_features_and_roadmap/: features_and_roadmap.md
backend/core/: env.py
backend/core/agents/: extract_ingredients_node.py  graph.py  info_gathering_agent.py  utility_nodes.py
backend/core/agents/state/: chatbot_state.py
backend/core/data_loading/: recipe_to_mongo.py
backend/core/local/envs/: .env.dev
backend/core/scraping/: reddit.py
backend/core/tools/: recipe_search.py
backend/core/utils/: chat_model.py  utils_image.py  utils_llm.py  utils_mongodb.py
backend/data/: recipes_reddit_raw.csv
backend/preprocessing/: preprocess_recipes.py  preprocessing_enums.py
backend/scripts/: scrape_reddit.sh
frontend/: app.py  astream_events_handler.py
